added HTML5 video player and updated the UI

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,3 +2,6 @@
 html 
     background-color: "#f7f7f7"
 
+@font-face
+  font-family: SFUIText-Regular
+  src: url(assets/fonts/SFUIText-Regular.woff) format("opentype")
