added transcript component

--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -1,7 +1,14 @@
 <div class="video-player">
   <h1 class="video-header">Moment from meeting with Two Pillars</h1>
-  <video width="400" controls>
-    <source src="https://static.chorus.ai/api/4d79041e-f25f-421d-9e5f-3462459b9934.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-  </video>
+  <section class="video">
+    <video width="400" controls>
+      <source src="https://static.chorus.ai/api/4d79041e-f25f-421d-9e5f-3462459b9934.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+    </video>
+  </section>
+  <section class="transcript">
+    <app-transcript transcript="'hello transcript'"></app-transcript>
+  </section>
+
+
 </div>
