added trascript content and coresponding UI

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -2,6 +2,8 @@
     text-align: center
     margin: 20vh
     background: #fff
+    border: 1px solid #D7DADE
+    border-radius: 5px
 
 $breakpoint-tablet: 768px;
 @media (max-width: $breakpoint-tablet)
