--- a/src/app/video-player/video-player.component.sass
+++ b/src/app/video-player/video-player.component.sass
@@ -5,3 +5,9 @@
         font-family: SFUIText-Regular
         color: #333333
         line-height: 28px
+    
+    .video
+        video
+            background: #000000
+            box-shadow: 0 0 8px 0 rgba(0,0,0,0.30)
+            border-radius: 4px
