--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="app-main">
-  <app-video-player></app-video-player>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
 
