--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -1,12 +1,14 @@
 <div class="video-player">
   <h1 class="video-header">Moment from meeting with Two Pillars</h1>
-  <section class="video">
+  <section class="video" *ngIf="videoUrl">
     <video width="400" controls>
-      <source src="https://static.chorus.ai/api/4d79041e-f25f-421d-9e5f-3462459b9934.mp4" type="video/mp4">
+      <source src="{{ videoUrl }}" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
   </section>
-  <section class="transcript">
-    <app-transcript transcript="'hello transcript'"></app-transcript>
+  <section class="transcripts" *ngIf="transcripts">
+    <div class="transcript" *ngFor="let transcript of transcripts">
+        <app-transcript [transcript]="transcript"></app-transcript>
+    </div>
   </section>
 </div>
