--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -1,10 +1,17 @@
 <div class="video-player">
   <h1 class="video-header">Moment from meeting with Two Pillars</h1>
   <section class="video" *ngIf="videoUrl">
-    <video width="400" controls>
+    <video width="400" #videoPlayer>
       <source src="{{ videoUrl }}" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
+    <div class="video-overlay" *ngIf="playerPause">
+      <div class="play-btn" (click)="playVideo()">
+        <div class="btn">
+            <i class="fas fa-play"></i>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="transcripts" *ngIf="transcripts">
     <app-transcript
