added error section

--- a/src/app/video-player/video-player.component.sass
+++ b/src/app/video-player/video-player.component.sass
@@ -46,6 +46,16 @@
                         font-size: 20px
                         transform: translate(0, 50%)
 
+.error
+    text-align: center
+    min-height: 200px
+    display: flex
+    align-items: center
+    border-radius: 4px
+    justify-content: center
+    border: 2px dotted #532d2d
+    margin: 20px
+
 $breakpoint-tablet: 768px;
 $breakpoint-mobile: 640px;
 @media (max-width: $breakpoint-tablet)
