--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -1,4 +1,4 @@
-<div class="video-player">
+<div class="video-player" *ngIf="videoUrl">
   <h1 class="video-header">Moment from meeting with Two Pillars</h1>
   <section class="video" *ngIf="videoUrl">
     <video width="400" #videoPlayer>
@@ -19,4 +19,7 @@
       [transcript]="transcript"
     ></app-transcript>
   </section>
+</div>
+<div class="error" *ngIf="!videoUrl">
+  <h1>There was an error loading the data!</h1>
 </div>
